--- a/index.html
+++ b/index.html
@@ -27,7 +27,62 @@
         </div>
     </header>
     <section id="banner">
+        <div class="container column">
+            <div class="banner_headline">
+                <h1>Experiência Incrivel</h1>
+                <h2>Conheça valores que cabem no seu bolso</h2>
+            </div>
 
+            <div class="banner_options">
+                <div class="banner1">
+                    <div class="banner_title">Emergências</div>
+                    <div class="banner_desc">Sem agendamento prévio. Visite-nos e seja atendido rapidamente</div>
+                    <a href="">Saiba Mais</a>
+                </div>
+                <div class="banner2">
+                    <div class="banner_title">Resultado de Exames</div>
+                    <div class="banner_desc">Consulte resultados de exames realizados</div>
+                    <a href="">Saiba Mais</a>
+                </div>
+                <div class="banner3">
+                    <div class="banner_title">Planos e Convênios</div>
+                    <div class="banner_desc">Plano de saúde Empresarial Smart</div>
+                    <a href="">Saiba Mais</a>
+                </div>
+            </div>
+            
+        </div>
     </section>
+
+
+    <section id="geral">
+        <div class="container">
+            <div class="widget">
+                <div class="widget_title">
+                    <div class="widget_title_text">Departamentos</div>
+                    <div class="widget_title_bar"></div>
+                </div>
+                <div class="widget_body">
+                    TEXTO SEÇÃO DEPARTAMENTOS
+                </div>
+
+
+                <div class="widget_title">
+                    <div class="widget_title_text">Planos & Convênios</div>
+                    <div class="widget_title_bar"></div>
+                </div>
+                <div class="widget_body">
+                    TEXTO SEÇÃO PLANOS 
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div id="rodape">
+            Medicenter Copyright - Todos os direitos reservados
+        </div>
+
+    </footer>
 </body>
 </html>
